# earnings-intelligence-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  graph.py  main.py
app/agents/: __init__.py  citations.py  comparator.py  critic.py  document_advisor.py  financial_extractor.py  language_differ.py  llm_critic.py  note_writer.py  peer_reader.py  synthesizer.py  transcript_analyzer.py  upload_intake.py  watcher.py
app/api/: __init__.py  advise.py  chat.py  dependencies.py  health.py  upload.py
app/delivery/: __init__.py
app/llm/: __init__.py  client.py  prompts.py
app/memory/: __init__.py  db.py  models.py  redis_client.py  repository.py  schemas.py
app/models/: __init__.py  state.py
app/observability/: __init__.py  logging.py  tracing.py
app/scripts/: __init__.py  backfill_language.py  poll_once.py  seed_peers.py
app/tools/: __init__.py  advisor.py  companyfacts.py  consensus.py  documents.py  edgar.py  embeddings.py  sections.py
data/: peers.yaml
docs/: phase3-labeling.md  phase4b-labeling.md  review-prompt.md  runbook.md
docs/superpowers/plans/: 2026-05-15-phase-3-language-differ.md  2026-05-16-phase-4a-upload-infrastructure.md  2026-05-16-phase-4b-transcript-analyzer.md  2026-05-16-phase4b-transcript-analyzer.md  2026-05-17-phase-5-implementation.md
docs/superpowers/specs/: 2026-05-15-phase-3-language-differ-design.md  2026-05-16-phase4b-transcript-analyzer-design.md  2026-05-16-upload-first-pivot-design.md  2026-05-17-phase-5-design.md
migrations/: env.py
migrations/versions/: 20260515_1933_0001_phase1_schema.py  20260515_2230_0002_phase2_schema.py  20260515_2330_0003_phase3_schema.py  20260516_1253_0004_phase4a_uploaded_documents.py  20260516_1954_0006_phase4b_relax_filings_form_check.py  20260516_2035_0005_phase4b_transcripts_and_commitments.py  20260516_2129_0007_widen_filings_accession_number.py  20260517_1100_0008_phase5a_notes.py  20260517_1130_0009_phase5b_peers.py
prompts/critic/: llm_v1.md  numbers_v0.md
prompts/synthesizer/: full_v1.md  full_with_peers_v1.md  numbers_v1.md  numbers_with_language_v1.md
prompts/transcript_analyzer/: extract_v1.md  reconcile_v1.md
tests/: conftest.py
tests/fixtures/adversarial_notes/: _build_bases.py  generate.py
tests/fixtures/adversarial_notes/base/: msft_8k.md  msft_8k.state.json  nimbus_q2.md  nimbus_q2.state.json  nimbus_q3.md  nimbus_q3.state.json  synthetic_a.md  synthetic_a.state.json  synthetic_b.md  synthetic_b.state.json
tests/fixtures/adversarial_notes/perturbed/: msft_8k__citation_swap.json  msft_8k__contradicted_direction.json  msft_8k__fabricated_peer.json  msft_8k__hallucinated_commitment.json  msft_8k__number_swap.json  msft_8k__per_share_scale_confusion.json  nimbus_q2__citation_swap.json  nimbus_q2__contradicted_direction.json  nimbus_q2__fabricated_peer.json  nimbus_q2__hallucinated_commitment.json  nimbus_q2__number_swap.json  nimbus_q2__per_share_scale_confusion.json  nimbus_q3__citation_swap.json  nimbus_q3__contradicted_direction.json  nimbus_q3__fabricated_peer.json  nimbus_q3__hallucinated_commitment.json  nimbus_q3__number_swap.json  nimbus_q3__per_share_scale_confusion.json  synthetic_a__citation_swap.json  synthetic_a__contradicted_direction.json  synthetic_a__fabricated_peer.json  synthetic_a__hallucinated_commitment.json  synthetic_a__number_swap.json  synthetic_a__per_share_scale_confusion.json  (+6 more)
tests/fixtures/edgar_html/: synthetic_10q_minimal.html
tests/fixtures/language_recall/: labels.yaml
tests/fixtures/uploaded_pdfs/: README.md
tests/integration/: test_backfill_language.py  test_commitment_reconciliation.py  test_graph.py  test_health.py  test_language_differ.py  test_migrations.py  test_multi_quarter_synthetic_run.py  test_notes_persistence.py  test_peer_reader_e2e.py  test_phase5_cost_cap.py  test_repository.py  test_upload_api.py  test_upload_transcript_e2e.py  test_watcher.py
tests/unit/: _transcript_extract_helpers.py  test_adversarial_critic.py  test_advisor.py  test_advisor_accuracy.py  test_advisor_cassette_index.py  test_citations.py  test_commitment_extraction.py  test_companyfacts_parser.py  test_comparator.py  test_config.py  test_consensus_fetcher.py  test_critic.py  test_critic_transcript_citations.py  test_dependencies.py  test_document_advisor_agent.py  test_documents_parser.py  test_edgar_client.py  test_embeddings_client.py  test_language_differ.py  test_llm_client.py  test_llm_critic.py  test_note_writer.py  test_peer_citations.py  test_peer_reader.py  test_phase4b_fixtures.py  test_poll_once_cli.py  test_prompt_loader.py  test_recall_gate.py  test_repository_notes.py  test_repository_peers.py  test_schemas.py  test_section_parser.py  test_state.py  test_synthesizer.py  test_transcript_analyzer.py  test_transcript_analyzer_f1.py  test_transcript_analyzer_prompts.py  test_upload_intake.py  test_watcher_gating.py
(+47 files in other folders)
